attaching tizentv specific (remote control) key down events listener

--- a/demo/index.html
+++ b/demo/index.html
@@ -94,6 +94,7 @@ UNCOMPILED_JS = [
 
     <!-- Load the compiled or uncompiled version of the code. -->
     <script defer src="load.js"></script>
+    <script defer src="tizen/tvkeys.js"></script>
   </head>
   <body>
     <div id="main-layout" class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
