swiching to private (developer live server) url of the demo page

--- a/demo/tizen/index.html
+++ b/demo/tizen/index.html
@@ -14,8 +14,8 @@
 
       console.log("window.onload() called");
 
-      //var webAppURL = "http://106.120.44.31:5500/demo/#audiolang=en-GB;textlang=en-GB;uilang=en-GB;panel=HOME;build=uncompiled";
-      var webAppURL = "https://shaka-player-demo.appspot.com/demo/index.html";
+      var webAppURL = "http://106.120.44.31:5500/demo/#audiolang=en-GB;textlang=en-GB;uilang=en-GB;panel=HOME;build=uncompiled";
+      //var webAppURL = "https://shaka-player-demo.appspot.com/demo/index.html";
 
       console.log("Trying to open ShakaPlayer demo page ...");
       window.location.assign(webAppURL);
